// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Grid col 1`] = `
Array [
  .emotion-0 {
  background: silver;
  display: inline-block;
  padding: 20px;
}

<span
    class="emotion-0 emotion-1"
    color="silver"
  />,
  .emotion-6 {
  display: inline-block;
  vertical-align: inherit;
}

.emotion-6 > * {
  margin-left: 10px;
  vertical-align: inherit;
}

.emotion-6 > *:nth-child(0) {
  margin-left: 0;
}

.emotion-0 {
  background: hotpink;
  display: inline-block;
  padding: 20px;
}

<div
    class="emotion-6 emotion-7"
  >
    <span
      class="emotion-0 emotion-1"
    />
    <span
      class="emotion-0 emotion-1"
    />
    <span
      class="emotion-0 emotion-1"
    />
  </div>,
  .emotion-0 {
  background: silver;
  display: inline-block;
  padding: 20px;
}

<span
    class="emotion-0 emotion-1"
    color="silver"
  />,
]
`;

exports[`Storyshots Components|Grid col outer 1`] = `
Array [
  .emotion-0 {
  background: silver;
  display: inline-block;
  padding: 20px;
}

<span
    class="emotion-0 emotion-1"
    color="silver"
  />,
  .emotion-0 {
  background: hotpink;
  display: inline-block;
  padding: 20px;
}

.emotion-6 {
  display: inline-block;
  vertical-align: inherit;
  margin-left: 10px;
  margin-right: 10px;
}

.emotion-6 > * {
  margin-left: 10px;
  vertical-align: inherit;
}

.emotion-6 > *:nth-child(0) {
  margin-left: 0;
}

<div
    class="emotion-6 emotion-7"
  >
    <span
      class="emotion-0 emotion-1"
    />
    <span
      class="emotion-0 emotion-1"
    />
    <span
      class="emotion-0 emotion-1"
    />
  </div>,
  .emotion-0 {
  background: silver;
  display: inline-block;
  padding: 20px;
}

<span
    class="emotion-0 emotion-1"
    color="silver"
  />,
]
`;

exports[`Storyshots Components|Grid row 1`] = `
Array [
  .emotion-0 {
  background: silver;
  padding: 20px;
}

<div
    class="emotion-0 emotion-1"
    color="silver"
  />,
  .emotion-6 > * {
  margin-top: 10px;
}

.emotion-6 > *:nth-child(0) {
  margin-top: 0;
}

.emotion-0 {
  background: hotpink;
  padding: 20px;
}

<div
    class="emotion-6 emotion-7"
  >
    <div
      class="emotion-0 emotion-1"
    />
    <div
      class="emotion-0 emotion-1"
    />
    <div
      class="emotion-0 emotion-1"
    />
  </div>,
  .emotion-0 {
  background: silver;
  padding: 20px;
}

<div
    class="emotion-0 emotion-1"
    color="silver"
  />,
]
`;

exports[`Storyshots Components|Grid row multiply 1`] = `
Array [
  .emotion-0 {
  background: silver;
  padding: 20px;
}

<div
    class="emotion-0 emotion-1"
    color="silver"
  />,
  .emotion-0 {
  background: hotpink;
  padding: 20px;
}

.emotion-6 {
  margin-top: 5px;
  margin-bottom: 5px;
}

.emotion-6 > * {
  margin-top: 30px;
}

.emotion-6 > *:nth-child(0) {
  margin-top: 0;
}

<div
    class="emotion-6 emotion-7"
  >
    <div
      class="emotion-0 emotion-1"
    />
    <div
      class="emotion-0 emotion-1"
    />
    <div
      class="emotion-0 emotion-1"
    />
  </div>,
  .emotion-0 {
  background: silver;
  padding: 20px;
}

<div
    class="emotion-0 emotion-1"
    color="silver"
  />,
]
`;

exports[`Storyshots Components|Grid row outer 1`] = `
Array [
  .emotion-0 {
  background: silver;
  padding: 20px;
}

<div
    class="emotion-0 emotion-1"
    color="silver"
  />,
  .emotion-0 {
  background: hotpink;
  padding: 20px;
}

.emotion-6 {
  margin-top: 10px;
  margin-bottom: 10px;
}

.emotion-6 > * {
  margin-top: 10px;
}

.emotion-6 > *:nth-child(0) {
  margin-top: 0;
}

<div
    class="emotion-6 emotion-7"
  >
    <div
      class="emotion-0 emotion-1"
    />
    <div
      class="emotion-0 emotion-1"
    />
    <div
      class="emotion-0 emotion-1"
    />
  </div>,
  .emotion-0 {
  background: silver;
  padding: 20px;
}

<div
    class="emotion-0 emotion-1"
    color="silver"
  />,
]
`;
